<resources>
    <string name="app_name">Cocktail</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="log_in">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="do_you_have_an_account_sign_in">Do you have an account? Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_">SIGN UP</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">new Password</string>
    <string name="popular_cocktails">Popular\nCocktails</string>
    <string name="latest_cocktails" translatable="false">Latest\nCocktails</string>
    <string name="category">Category:</string>
    <string name="glass">Glass:</string>
    <string name="retry">Retry</string>
    <string name="double_backpress">Press back again to leave the app</string>
    <string name="couldnot_login_try_again_later">Couldn\'t login, try again later!</string>
    <string name="input_correct_login_credentials">Input correct login credentials!</string>
    <string name="couldnot_create_account_try_again_later">Couldn\'t create account, try again later!</string>
    <string name="your_input_is_not_correct">Your input is not correct</string>
    <string name="network_error">Network error</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="password_has_changed">Password has changed</string>
    <string name="password_has_not_changed">Password has not changed</string>
    <string name="input_is_incorrect">Input is incorrect</string>
    <string name="reset_message_is_sent_on_the_mail">Reset message is sent on the mail!</string>
    <string name="try_again_later">Try again later</string>
    <string name="alcohol" translatable="false">alcohol:</string>
    <string name="home" translatable="false">Home</string>
    <string name="craft" translatable="false">Craft</string>
    <string name="settings" translatable="false">Settings</string>
</resources>